# cap-server-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  release_gh.yml  release_pypi.yml
cap_api/: __init__.py  __version__.py
cap_server_api/: __init__.py  __version__.py
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst  requirements.txt
examples/: cap_api_simpletest.py  cap_server_api_simpletest.py  simpletest.py
